--- a/src/zenubuInput.tpl.html
+++ b/src/zenubuInput.tpl.html
@@ -1,5 +1,6 @@
 <ng-form name="innerForm">
     <div ng-class="{'has-error' : hasError()}" class="form-group has-feedback">
+        <label ng-if="label">{{label}}</label>
         <div ng-class="{'input-group' : inputGroup}">
             <input type="{{validation.type}}" class="form-control" name="input" ng-class="{'input-lg': large}"
                    ng-if="!sameAs"
