Fixed position of icons for select with label

--- a/src/zenubuSelect.tpl.html
+++ b/src/zenubuSelect.tpl.html
@@ -31,7 +31,7 @@
         </span>
 
         <span class="fa fa-fw fa-sort single-input-feedback"
-              ng-class="{'text-danger' : hasError()}"
+              ng-class="{'text-danger' : hasError(), 'has-label': hasLabel}"
               ng-if="!validation.required"
               focus-select></span>
 
